--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2,6 +2,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
 
 /* You can add custom global styles here */
 /* For Mantine, you might add some global styling or overrides */
